export interface Allergen {
    name: string
}