import { Section } from './section.interface'

export interface Menu {
    sections: Section[]
}