@startuml
class Customer {
  String id;
  String email;
  List<Business> businesses;

  String createBusiness(Business business);
  String createMenu(Business business, Menu menu);
}

class Business {
  String id;
  String name;
  Customer customer;
  List<Menu> menus;

  String createMenu(Menu menu);
}

class Menu {
  Business business;
  List<MenuSection> sections;

  String createDish(Dish dish);
}

class MenuSection {
  List<Dish> dishes;
}

class Dish {
  Menu menu;
  List<Intolerance> intolerances;
}

class Allergen {
  String name;
}

Customer *-- Business
Business *-- Menu
Menu *-- MenuSection
MenuSection *-- Dish
Dish *-- Allergen
@enduml